--- a/css/index.css
+++ b/css/index.css
@@ -74,6 +74,7 @@ body {
   margin-bottom: 2px;
 }
 
+/* TODO Fix the shimmer effect */
 .shimmer {
   position: absolute;
   bottom: 0;
@@ -107,6 +108,20 @@ body {
   100% {
     transform: translateX(100vw);
   }
+}
+
+.simpleSearchBar{
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: (-50%, -50%);
+    z-index: 3;
+
+    padding: 20px;
+
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .pokemon-grid-container {
