--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,7 @@ body {
   width: 40px;
 }
 
-.nav-links a {
+.navLinks a {
   font-size: 18px;
   font-weight: 500;
   margin-left: 30px;
@@ -57,7 +57,7 @@ body {
   transition: color 0.3s;
 }
 
-.nav-links a::before {
+.navLinks a::before {
   content: '';
   position: absolute;
   width: 0%;
@@ -68,7 +68,7 @@ body {
   transition: width 0.3s ease-in-out;
 }
 
-.nav-links a:hover::before {
+.navLinks a:hover::before {
   width: 100%;
 }
 
