--- a/css/table.css
+++ b/css/table.css
@@ -23,6 +23,22 @@
   padding: 15px;
   border-radius: 20px;
   border: 3px inset #000;
+  max-height: 400px; /* Or whatever fits nicely in your layout */
+  overflow-y: auto;
+}
+
+.table::-webkit-scrollbar {
+  width: 8px;
+}
+
+.table::-webkit-scrollbar-thumb {
+  background: #ffcb05;
+  border-radius: 4px;
+}
+
+.table::-webkit-scrollbar-track {
+  background: #333;
+  border-radius: 4px;
 }
 
 /* Table stays clean */
