--- a/css/index.css
+++ b/css/index.css
@@ -265,3 +265,34 @@
     font-size: 14px;
   }
 }
+
+.runtimeDisplayContainer {
+  position: fixed;
+  top: 100px; 
+  left: 20px;
+  width: 250px;
+  height: calc(100vh - 140px);
+  max-height: 230px;
+  overflow-y: auto;
+  background: rgb(222, 232, 232);
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  padding: 15px;
+  z-index: 9999;
+}
+
+.runtimeDisplay {
+  font-family: Arial, sans-serif;
+  color: #2b2b2b;
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+.runtimeEntry {
+  background: white;
+  margin-bottom: 8px;
+  padding: 8px 12px;
+  border-radius: 6px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  word-break: break-word;
+}
