--- a/css/index.css
+++ b/css/index.css
@@ -107,6 +107,40 @@
   flex: 2;
 }
 
+.typeInputBox {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 100%;
+  max-width: 125px;
+}
+
+.typeInputBox label {
+  font-size: 14px;
+  font-weight: 600;
+  color: #2b2b2b;
+}
+
+.typeInputBox select {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: white;
+  font-size: 14px;
+  color: #333;
+  transition: border-color 0.2s ease;
+}
+
+.typeInputBox select:focus {
+  border-color: #f53100;
+  outline: none;
+}
+
+.typeInputBox select option {
+  font-size: 14px;
+}
+
+
 /* Coordinate container */
 .coordinates-container {
   display: flex;
@@ -212,24 +246,60 @@
 }
 
 /* Type Colors */
-.electric { background-color: #f8d030; }
-.fire     { background-color: #f08030; }
-.water    { background-color: #6890f0; }
-.grass    { background-color: #78c850; }
-.ice      { background-color: #98d8d8; }
-.fighting { background-color: #c03028; }
-.poison   { background-color: #a040a0; }
-.ground   { background-color: #e0c068; }
-.flying   { background-color: #a890f0; }
-.psychic  { background-color: #f85888; }
-.bug      { background-color: #a8b820; }
-.rock     { background-color: #b8a038; }
-.ghost    { background-color: #705898; }
-.dragon   { background-color: #7038f8; }
-.dark     { background-color: #705848; }
-.steel    { background-color: #b8b8d0; }
-.fairy    { background-color: #ee99ac; }
-.normal   { background-color: #a8a878; }
+.electric {
+  background-color: #f8d030;
+}
+.fire {
+  background-color: #f08030;
+}
+.water {
+  background-color: #6890f0;
+}
+.grass {
+  background-color: #78c850;
+}
+.ice {
+  background-color: #98d8d8;
+}
+.fighting {
+  background-color: #c03028;
+}
+.poison {
+  background-color: #a040a0;
+}
+.ground {
+  background-color: #e0c068;
+}
+.flying {
+  background-color: #a890f0;
+}
+.psychic {
+  background-color: #f85888;
+}
+.bug {
+  background-color: #a8b820;
+}
+.rock {
+  background-color: #b8a038;
+}
+.ghost {
+  background-color: #705898;
+}
+.dragon {
+  background-color: #7038f8;
+}
+.dark {
+  background-color: #705848;
+}
+.steel {
+  background-color: #b8b8d0;
+}
+.fairy {
+  background-color: #ee99ac;
+}
+.normal {
+  background-color: #a8a878;
+}
 
 /* Responsive Design */
 @media (max-width: 768px) {
@@ -268,7 +338,7 @@
 
 .runtimeDisplayContainer {
   position: fixed;
-  top: 100px; 
+  top: 100px;
   left: 20px;
   width: 250px;
   height: calc(100vh - 140px);
