--- a/css/index.css
+++ b/css/index.css
@@ -98,6 +98,15 @@
   margin-bottom: 10px;
 }
 
+.advSearchBar .typePicker {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
 .advSearchBar .timePicker label {
   flex: 1;
   margin-bottom: 5px;
